--- a/package.json
+++ b/package.json
@@ -43,7 +43,9 @@
     "eslint-plugin-vue": "^7.5.0",
     "husky": "^4.3.8",
     "lint-staged": "^10.5.3",
+    "node-sass": "^5.0.0",
     "prettier": "^2.2.1",
+    "sass-loader": "^10.1.1",
     "stylelint": "^13.9.0",
     "stylelint-config-prettier": "^8.0.2",
     "stylelint-config-recommended-scss": "^4.2.0",
